--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "jquery": "^3.2.1",
+    "raphael": "^2.2.7",
     "vue": "^2.4.4",
     "vue-carousel": "^0.6.5",
     "vuetify": "^0.16.9"
